Fix token placement on mobile screens

--- a/src/components/Board/Board.scss
+++ b/src/components/Board/Board.scss
@@ -52,7 +52,8 @@
 @media screen and (min-width: 375px) {
   .boxes {
     height: 50px;
-    width: 50px 
+    width: 50px ;
+    font-size: 15px
   }
   .turn-message {
     font-size: 1.5em;
